<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:label="@string/app_name"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/connect_server"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="33dp"
        android:background="@drawable/ic_launcher_background"
        android:onClick="onClick"
        android:text="@string/connect_to_server"
        android:textColor="@color/colorPrimaryDark"
        android:textColorHighlight="@color/colorPrimaryDark"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/edMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/connect_server"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:autofillHints="@string/app_name"
        android:background="@color/colorAccent"
        android:hint="@string/app_name"
        android:inputType="textLongMessage"
        android:text="@string/message_from_client"
        android:textColor="@color/colorPrimary"
        tools:targetApi="o" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/send_data"
        android:layout_below="@+id/edMessage"
        android:background="@color/colorPrimary">

        <LinearLayout
            android:id="@+id/msgList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" />

    </ScrollView>

    <Button
        android:id="@+id/send_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/ic_launcher_background"
        android:onClick="onClick"
        android:text="@string/message_to_server"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp" />

</RelativeLayout>

